--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "@types/ws": "^8.5.3",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.3"
